# xlog-watcher

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  TODO.md  binding.gyp  package-lock.json  package.json
src/: awwleegay_wrapper.cc  contentProvider.ts  extension.ts  hoverProvider.ts  impl.ts  platform.h  schema.ts  utils.ts
src/awwleegay/: Cargo.toml
src/awwleegay/src/: lib.rs  log_filter.rs  utils.rs  xlog_decode.rs
