[package]
name = "awwleegay"
version = "0.1.0"
authors = ["HotQ <calmoaf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

[lib]
# crate-type=["cdylib"]
crate-type=["staticlib"]
